# openenclave-tpm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  tpm.edl
enc/: CMakeLists.txt  enc.c  tcti-tbs-ocalls.c  tcti-tbs-ocalls.h
host/: CMakeLists.txt  host.c  windows-ocall-tbs.c
scripts/: format-code  pre-commit
tpm/: CMakeLists.txt  ocall-tbs.h  tpm.c  tpm.h
tpm2-tss/: CMakeLists.txt  build_tpm2_tss.sh  generate_tpm2_tss_config.sh
